--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.mycore</groupId>
     <artifactId>mycore-parent</artifactId>
-    <version>43-SNAPSHOT</version>
+    <version>43</version>
     <relativePath />
   </parent>
   <groupId>de.vzg.ubo</groupId>
@@ -15,7 +15,7 @@
 
   <name>UBO FU Hagen</name>
   <url>...</url>
-  <description>Bibliographie Module for FU Hagen</description>
+  <description>Bibliographie module for FU Hagen</description>
   <inceptionYear>2020</inceptionYear>
 
   <build>
