add test instance property, fix link in app logo, remove search legend

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -8,3 +8,5 @@
 # https://www.zeitschriftendatenbank.de/services/schnittstellen/journals-online-print/
 UBO.JOP.Parameters=genre=journal&sid=bib:fuh&pid=bibid%3DFUH&issn=
 UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
+
+UBO.TestInstance=true
