add PublicationEventHandler and ObfuscationEventHandler configuration

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -9,4 +9,16 @@
 UBO.JOP.Parameters=genre=journal&sid=bib:fuh&pid=bibid%3DFUH&issn=
 UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
 
+MCR.EventHandler.MCRObject.019.Class=org.mycore.ubo.publication.PublicationEventHandler
+MCR.user2.IdentityManagement.UserCreation.Unvalidated.Realm=unvalidated
+MCR.user2.matching.publication.connection.strategy=uuid
+MCR.user2.IdentityManagement.UserCreation.Affiliation=Hagen
+
+UBO.LSF.Link=https://www.th-koeln.de/hochschule/personen_3850.php/
+UBO.Editable.Attributes=id_gnd,id_orcid,id_local
+
 UBO.TestInstance=true
+
+# configure ObfuscationEventHandler
+MCR.publication.obfuscation.targetIdentifierType=local
+MCR.publication.obfuscation.replacementIdentifierType=aid
