import from deposit hagen

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -8,3 +8,8 @@
 # https://www.zeitschriftendatenbank.de/services/schnittstellen/journals-online-print/
 UBO.JOP.Parameters=genre=journal&sid=bib:fuh&pid=bibid%3DFUH&issn=
 UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
+
+UBO.RepositoryBaseURL=https://ub-deposit.fernuni-hagen.de/
+MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes=hagen
+MCR.MODS.EnrichmentResolver.DataSource.hagen.hagen.URI=xslStyle:import/mir2mods:%UBO.RepositoryBaseURL%receive/{0}?XSL.Style=xml
+MCR.MODS.EnrichmentResolver.DataSources.import=%MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes% %MCR.MODS.EnrichmentResolver.DataSources.import%
