enable import from deposit_hagen

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -22,3 +22,10 @@ UBO.TestInstance=true
 # configure ObfuscationEventHandler
 MCR.publication.obfuscation.targetIdentifierType=local
 MCR.publication.obfuscation.replacementIdentifierType=aid
+
+
+UBO.RepositoryBaseURL=https://ub-deposit.fernuni-hagen.de/
+MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes=hagen
+MCR.MODS.EnrichmentResolver.DataSource.hagen.hagen.URI=xslStyle:import/mir2mods:%UBO.RepositoryBaseURL%receive/{0}?XSL.Style=xml
+MCR.MODS.EnrichmentResolver.DataSources.import=%MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes% %MCR.MODS.EnrichmentResolver.DataSources.import%
+
