configure publication event handler to remove lead_id in mods:name

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -19,10 +19,8 @@ UBO.Editable.Attributes=id_gnd,id_orcid,id_local
 
 UBO.TestInstance=true
 
-# configure ObfuscationEventHandler
-MCR.publication.obfuscation.targetIdentifierType=local
-MCR.publication.obfuscation.replacementIdentifierType=aid
-
+# If true, then the nameIdentifier with the lead_id will be removed from the mods element
+MCR.user2.matching.lead_id.skip=true
 
 UBO.RepositoryBaseURL=https://ub-deposit.fernuni-hagen.de/
 MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes=hagen
