sync editor with current UBO version and fixed labels

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -9,6 +9,16 @@
 UBO.JOP.Parameters=genre=journal&sid=bib:fuh&pid=bibid%3DFUH&issn=
 UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
 
+######################################################################
+#                                                                    #
+#                                 Primo                              #
+#                                                                    #
+######################################################################
+
+# Specify search link for ISBN and shelfmark
+UBO.Primo.Search.Link=https://www.ub-katalog.fernuni-hagen.de/F/?func=find-b&find_code=IBN&request=978-3-658-31579-5
+
+
 MCR.EventHandler.MCRObject.019.Class=org.mycore.ubo.publication.PublicationEventHandler
 MCR.user2.IdentityManagement.UserCreation.Unvalidated.Realm=unvalidated
 MCR.user2.matching.publication.connection.strategy=uuid
