fixed isbn search link

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -11,13 +11,12 @@ UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
 
 ######################################################################
 #                                                                    #
-#                                 Primo                              #
+#                                Catalog                             #
 #                                                                    #
 ######################################################################
 
-# Specify search link for ISBN and shelfmark
-UBO.Primo.Search.Link=https://www.ub-katalog.fernuni-hagen.de/F/?func=find-b&find_code=IBN&request=978-3-658-31579-5
-
+# Specify search link for ISBN
+UBO.ISBN.Search.Link=https://www.ub-katalog.fernuni-hagen.de/F/?func=find-b&find_code=IBN&request=
 
 MCR.EventHandler.MCRObject.019.Class=org.mycore.ubo.publication.PublicationEventHandler
 MCR.user2.IdentityManagement.UserCreation.Unvalidated.Realm=unvalidated
