DMS-166 add scopus configuration

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -18,6 +18,17 @@ UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
 # Specify search link for ISBN
 UBO.ISBN.Search.Link=https://www.ub-katalog.fernuni-hagen.de/F/?func=find-b&find_code=IBN&request=
 
+######################################################################
+#                                                                    #
+#                               SCOPUS                               #
+#                                                                    #
+######################################################################
+UBO.Scopus.Importer.ImportURI=xslStyle:import/scopus2mods,import/genre2genre,mods-filter-supported,mods2mycoreobject:%UBO.Scopus.API.URL%abstract/scopus_id/{0}?apikey=%UBO.Scopus.API.Key%&insttoken=%UBO.Scopus.API.Insttoken%
+MCR.MODS.EnrichmentResolver.DataSource.Scopus.doi.URI=xslStyle:import/scopus2mods,import/genre2genre:%UBO.Scopus.API.URL%abstract/doi/{0}?apikey=%UBO.Scopus.API.Key%&insttoken=%UBO.Scopus.API.Insttoken%
+MCR.MODS.EnrichmentResolver.DataSource.Scopus.scopus.URI=xslStyle:import/scopus2mods,import/genre2genre:%UBO.Scopus.API.URL%abstract/scopus_id/{0}?apikey=%UBO.Scopus.API.Key%&insttoken=%UBO.Scopus.API.Insttoken%
+UBO.Scopus.Importer.Status=imported
+
+
 MCR.EventHandler.MCRObject.019.Class=org.mycore.ubo.publication.PublicationEventHandler
 MCR.user2.IdentityManagement.UserCreation.Unvalidated.Realm=unvalidated
 MCR.user2.matching.publication.connection.strategy=uuid
