Use dummy matcher as default

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -30,6 +30,7 @@ UBO.Scopus.Importer.Status=imported
 
 
 MCR.EventHandler.MCRObject.019.Class=org.mycore.ubo.publication.PublicationEventHandler
+MCR.user2.matching.chain=org.mycore.ubo.matcher.MCRUserMatcherDummy
 MCR.user2.IdentityManagement.UserCreation.Unvalidated.Realm=unvalidated
 MCR.user2.matching.publication.connection.strategy=uuid
 MCR.user2.IdentityManagement.UserCreation.Affiliation=Hagen
