--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -37,6 +37,7 @@ MCR.user2.IdentityManagement.UserCreation.Affiliation=Hagen
 
 UBO.Editable.Attributes=id_gnd,id_orcid,id_local
 
+# show watermark for testinstance on website
 UBO.TestInstance=true
 
 # If true, then the nameIdentifier with the lead_id will be removed from the mods element
