--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -16,7 +16,7 @@ UBO.JOP.URL=http://services.dnb.de/fize-service/gvr/html-service.htm
 ######################################################################
 
 # Specify search link for ISBN
-UBO.ISBN.Search.Link=https://www.ub-katalog.fernuni-hagen.de/F/?func=find-b&find_code=IBN&request=
+UBO.ISBN.Search.Link=https://fub-hagen.digibib.net/search/katalog/list?q-ib=
 
 ######################################################################
 #                                                                    #
