fix csl output format

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -48,3 +48,5 @@ MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes=hagen
 MCR.MODS.EnrichmentResolver.DataSource.hagen.hagen.URI=xslStyle:import/mir2mods:%UBO.RepositoryBaseURL%receive/{0}?XSL.Style=xml
 MCR.MODS.EnrichmentResolver.DataSources.import=%MCR.MODS.EnrichmentResolver.DataSource.hagen.IdentifierTypes% %MCR.MODS.EnrichmentResolver.DataSources.import%
 
+MCR.ContentTransformer.cslhtml-extend.ContentDisposition=inline
+MCR.ContentTransformer.modsCsl-xhtml-pdf.FileExtension=html
