add statistic configuration

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -50,3 +50,10 @@ MCR.MODS.EnrichmentResolver.DataSources.import=%MCR.MODS.EnrichmentResolver.Data
 
 MCR.ContentTransformer.cslhtml-extend.ContentDisposition=inline
 MCR.ContentTransformer.modsCsl-xhtml-pdf.FileExtension=html
+
+##############################################################################
+# Statistics                                                                 #
+##############################################################################
+UBO.Statistics.Color.Bar=#004c97
+UBO.Statistics.Style.Labels={ font: 'normal 13px Verdana, sans-serif' }
+
