--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.mycore</groupId>
-    <artifactId>mycore-parent</artifactId>
-    <version>47</version>
+    <groupId>de.gbv.reposis</groupId>
+    <artifactId>reposis_parent</artifactId>
+    <version>2022.06-SNAPSHOT</version>
     <relativePath />
   </parent>
-  <groupId>de.vzg.ubo</groupId>
+  <groupId>de.gbv.ubo</groupId>
   <artifactId>ubo_hagen</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>prod-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>UBO FU Hagen</name>
