update origin classification and add batch command for data repair

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -57,3 +57,11 @@ MCR.ContentTransformer.modsCsl-xhtml-pdf.FileExtension=html
 UBO.Statistics.Color.Bar=#004c97
 UBO.Statistics.Style.Labels={ font: 'normal 13px Verdana, sans-serif' }
 
+######################################################################
+#                                                                    #
+#                             Batch Editor                           #
+#                                                                    #
+######################################################################
+
+MCR.BatchEditor.origin.Path2Remove=mods:classification[@valueURI="https://bibliographie.fernuni-hagen.de/classifications/ORIGIN#{0}"]
+MCR.BatchEditor.origin.Path2Add=mods:classification[@authorityURI="https://bibliographie.fernuni-hagen.de/classifications/ORIGIN"][@valueURI="https://bibliographie.fernuni-hagen.de/classifications/ORIGIN#{0}"]
