HSBHAGEN-28 - add detailed stylesheet for detailed REST API output

--- a/src/main/resources/config/ubo_hagen/mycore.properties
+++ b/src/main/resources/config/ubo_hagen/mycore.properties
@@ -1,3 +1,12 @@
+######################################################################
+#                                                                    #
+#                 enrich person IDs for REST-API                     #
+#                                                                    #
+######################################################################
+
+MCR.ContentTransformer.mods-xml-detailed.Class=org.mycore.common.content.transformer.MCRXSLTransformer
+MCR.ContentTransformer.mods-xml-detailed.Stylesheet=xslt/mycoreobject-mods-detailed.xsl
+MCR.ContentTransformer.mods-xml-detailed.TransformerFactoryClass=net.sf.saxon.TransformerFactoryImpl
 
 ######################################################################
 #                                                                    #
